Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/Payments__c.object-meta.xml
<CustomObject>
    <label>Payments</label>
    <nameField>
        <label>Payload Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>