Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>