Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NG</fullName>
                <default>true</default>
                <label>NG</label>
            </value>
            <value>
                <fullName>Ghana</fullName>
                <isActive>false</isActive>
                <label>Ghana</label>
            </value>
            <value>
                <fullName>India</fullName>
                <isActive>false</isActive>
                <label>India</label>
            </value>
            <value>
                <fullName>Kenya</fullName>
                <isActive>false</isActive>
                <label>Kenya</label>
            </value>
            <value>
                <fullName>Tanzania</fullName>
                <isActive>false</isActive>
                <label>Tanzania</label>
            </value>
            <value>
                <fullName>United States</fullName>
                <isActive>false</isActive>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>