Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NGN</fullName>
                <default>true</default>
                <label>NGN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>