Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Payment_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Id__c</fullName>
    <label>Payment Link Id</label>
    <type>Url</type>
</CustomField>