Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Payment_Link_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Reference__c</fullName>
    <label>Payment Link Reference</label>
    <type>Url</type>
</CustomField>