Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>