Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Payments__c/fields/Virtual_Account__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual Account</label>
    <referenceTo>Virtual_Account__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>